--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,16 @@
 <body>
     <div class="container text-center">
       <h1 class="jumbotron">Mission to Mars</h1>
+      {{all_items.title}}
       <div>
         <!-- write a for loop that lists out your data and accesses the values using dot notation. -->
           {% for item in all_items %}
           <div class="col-lg-4">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                  <h4 class="card-title">{{ item.mars_weather }}</h4>
-                  <!-- <h6 class="card-subtitle mb-2 text-muted">Cost: {{ item.cost }}</h6> -->
-                  <!-- <p class="card-text">Potential Revenue: {{ item.cost * item.stock}}</p> -->
+                  <h4 class="card-title">{{ item.title }}</h4> -->
+
+                  all_items.title
                 </div>
               </div>
           </div>
