--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
     <div class="container-fluid text-center">
       <h1 class="jumbotron">Mission to Mars</h1>
       
+      <form action="http://127.0.0.1:5000">
+        <input type="submit" value="Scrape New Data" />
+    </form>
+
       <div>
         <!-- write a for loop that lists out your data and accesses the values using dot notation. -->
           {% for item in all_items %}
